# VibeStream

./: .gitignore  ANALISIS_BACKEND_COMPLETO.md  ANALISIS_ESQUEMA_BASE_DATOS.md  ANALISIS_ESTADO_ACTUAL_PROXIMOS_PASOS.md  ANALISIS_EXHAUSTIVO_BACKEND.md  ANALISIS_EXHAUSTIVO_BACKEND_COMPLETO.md  ANALISIS_EXHAUSTIVO_FINAL_ESTRATEGIA.md  ANALISIS_PRE_FRONTEND.md  ANALISIS_PROXIMOS_PASOS.md  API_CONTRACT.md  BACKEND_ACTION_PLAN.md  BACKEND_GAPS_ANALYSIS.md  BIOMETRIA_FACIAL_PLAN.md  BIOMETRIA_FACIAL_RESUMEN.md  CLEANUP_SUMMARY.md  COMPILATION_FIXES.md  Cargo.toml  ESQUEMA_BASE_DATOS_RELACIONES.md  ESTRATEGIA_TESTING_RUST.md  FAN_LOYALTY_STATUS.md  FAN_VENTURES_FASE1_COMPLETA.md  FAN_VENTURES_FASE2_COMPLETA.md  FAN_VENTURES_FASE2_PROGRESO.md  FAN_VENTURES_IMPLEMENTATION_COMPLETE.md  FAN_VENTURES_INTEGRACION_COMPLETA.md  FAN_VENTURES_INTEGRACION_FINAL.md  FAN_VENTURES_PAGOS_INTEGRACION.md  FAN_VENTURES_PENDIENTE.md  FAN_VENTURES_RESUMEN_FINAL.md  FAN_VENTURES_TESTS_COMPLETE.md  FAN_VENTURES_VS_FRACTIONAL_OWNERSHIP.md  FASE_1_COMPLETADA.md  FASE_3_PLAN_ACCION.md  FASE_3_PROGRESO.md  FASE_3_TAREA_3.2_COMPLETADA.md  IMPLEMENTACION_MIDDLEWARE_AUTH.md  IMPLEMENTACION_PLAN_ACCION.md  IMPLEMENTATION_PROGRESS.md  ITERATION_COMPLETE.md  MIGRATION_SUMMARY.md  (+45 more)
backend/: .dockerignore  Cargo.toml  package-lock.json  package.json
backend/.sqlx/: config.toml
backend/backend-core/: Cargo.toml  Dockerfile
backend/backend-core/migrations/: 20240601000001_initial_schema.down.sql
backend/backend-core/scripts/: compile_circuits.sh  prove.js  setup_ceremony.sh
backend/backend-core/src/: config.rs  lib.rs  main.rs  types.rs
backend/circuits/: proof_of_listen.circom
backend/circuits/test/: proof_of_listen.test.js
backend/circuits/test_output/: proof_of_listen.r1cs
backend/circuits/util/: babyjub.circom  eddsa.circom  mimc.circom  multiplier.circom
backend/contracts/: erc20_abi.json
backend/contracts/proof/: package-lock.json  package.json
backend/docs/: openapi.yaml
backend/ethereum-integration/: Cargo.toml
backend/ethereum-service/: Cargo.toml
backend/ethereum-service/src/: main.rs
backend/migrations/: 20240601000001_initial_schema.sql
backend/program/: Cargo.toml
backend/program/src/: lib.rs
backend/scripts/: migrate.rs
backend/solana-integration/: Cargo.toml
backend/solana-integration/src/: lib.rs  nft.rs  wallet.rs
backend/solana-service/: Cargo.toml  Dockerfile
backend/solana-service/src/: config.rs  handlers.rs  main.rs  models.rs
backend/src/: error.rs  lib.rs  main.rs
backend/src/api/: artists.rs  auth.rs  mod.rs  nfts.rs  playlists.rs  royalties.rs  songs.rs  users.rs
backend/src/config/: mod.rs  secrets.rs
backend/src/core/: mod.rs
backend/src/db/: mod.rs
backend/src/middleware/: auth.rs  logging.rs  mod.rs
backend/src/models/: mod.rs  playlist_song.rs  royalty_payment.rs  song_nft.rs  user.rs
backend/src/repositories/: mod.rs  nft.rs  song.rs  user.rs
backend/src/services/: artist.rs  auth.rs  mod.rs  playlist.rs  royalty.rs
backend/src/utils/: mod.rs
backend/src/zk/: generator.rs
services/api-gateway/: CONFIG.md  Cargo.toml  IMPLEMENTATION_STATUS.md  POSTGRES_INTEGRATION.md  env.example  error_log.txt  migration.sql
services/api-gateway/.cargo/: config.toml
services/api-gateway/.sqlx/: config.json  query-059b7fa8d54c27a56fb280a1884c989bd9c09de986e65d26d9e3c46a65dccbe2.json  query-06cdfd1492c9b2e63c0a81acf224b197ebda22fe5a3c0b5b0fca412bba9f93f2.json  query-08899f47fc8c75a054bd5a9b792c6f65f104b906738939c812dfbd292c5ac4ad.json  query-0b23e827d03b074c4b56b0b3dd065cdecac83290a0d5412674fa88291cf292f4.json  query-0c4a87a6d2d0851802d231a271468d6cfc913eccbfaf6c51cebb991cfe7b4d94.json  query-283372a17709775b6f5710b828f30b58775ae6e023cd23975d5f3b21a8558af5.json  query-2ae144fa136f7648ea6d7492ccf36437bdff588f3fa97f055d5c61f7a09a97e6.json  query-3a03111ee5d72f848b9deebc7af36763f1dfd4a073fdeb8655fe509a899640f7.json  query-40b23c289ca80730f222d3f129b9308c473f73d2806a2c77d539ea90bb1b04d0.json  query-40c02cd92086b1a00f9fb7acddaca7c669ffe0cc29c62758283a36491676abd4.json  query-466cc0eb2473ad50a982926d18e5757064e5584181c23c0ca81a9f62c5594e43.json  query-4e774213e609b29e28e1fea0790ec14d7df5f039420056a7c0cb9eae2a2d5cd2.json  query-4fb96b526cbff1b93783f6d40ed5e337671056ded95a21d5c6624fff10abb2da.json  query-4fda47a2243e1d0c17d5d11c655e2d63036841af0e52d531bfa79accb80b27fe.json  query-52454ede64e2db6d21551da756ef8fd6680288463c8cc5623751c376a9b6c411.json  query-55cb4d4d9ad6f6cb149ee38e1f9f91a30892fba626ec702ed53550166326cb13.json  query-5825cf4131d8013dad1cdb86127c23b10c627c9da4fc97c047caeac7a733721e.json  query-5e8b5bea7a25d782e1e955ae5f9f042ef7e1e9402b7c6169306118714f4c2df8.json  query-6337731c4858fa27350b8df541ff2b6b4b9637d60835088b0c314b34ec8d369c.json  query-663945828a2dd448956c5a256e06b559b918af9414b0d4159ecb222f8a103796.json  query-6b347d9fc342a6fb96b6fefe1d4fd28b5d7b7a2f1655c2835a2ee15cad3f4a45.json  query-743baeba1404cbd79d1fbe4ca00de7ffd12f8b1d71b51e3ea797ba469a630245.json  query-7ed40a2ba80c75a4a7665680e0f6930dc27f520e83ba1728f5a0b0d61a70fd87.json  query-865e2265fecbe02168f294a537286cbe4666e65d96e718a5b097f8f748da8973.json  query-89373445c4000d0c2e8791d7bfb6a1773154e36e808e6d34a5002793dca6af60.json  query-8c2673ad0ae2ed0304594c32a2292ad234db6757f614c13631ed05ac99b1a5a9.json  query-a40b96c3954ecd809390ba612709dc7e9f500361c6088779fef9163f777493c9.json  query-ba03a045e36ac131df4633efdf1638f05827a474c1989ecd5313d0a38bdc9598.json  query-bb86e9c2b52ab68f4555d0f0eeba3962c01cc27b2bfd9d445224c5ff1fd16835.json  query-c2f06f5fa147a792eb6493d17d24dae0027802d66e2ea3e4dfb3388de47421e5.json  query-c889f52575a4fa3c4614df5a79e4c1d355266a4bfac69360447f48afe0249596.json  query-cb3658de14a0b02ff2f67d212c9b69552428200da6229206004145a4a5eb6bef.json  (+6 more)
services/ethereum/: Cargo.toml
services/ethereum/src/: main.rs  (+1 more)
services/fractional-ownership/: Cargo.toml
services/solana/: Cargo.toml
services/zk-service/: Cargo.toml
solana-integration/: Cargo.toml  Dockerfile
solana-integration/src/: handlers.rs  lib.rs  main.rs  metrics.rs  models.rs  nft.rs  wallet.rs
(+843 files in other folders)
