[workspace]
members = [
    "shared/types",
    "services/ethereum",
    "services/solana",
    "services/api-gateway",
    "services/zk-service"
]

resolver = "2"

[workspace.dependencies]
tokio = { version = "1.25", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
thiserror = "1.0" 