[workspace]
members = [
    "shared/types",
    # Servicios con tokio compatible (1.18+)
    "services/ethereum",
    "services/api-gateway", 
    "services/zk-service",
    "services/fractional-ownership"
    # Nota: solana-service se manejará independientemente por ahora
]

resolver = "2"

[workspace.dependencies]
# Solo dependencias que NO causan conflictos
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
thiserror = "1.0"

# Nota: tokio se maneja individualmente en cada servicio 