[package]
name = "vibestream-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
# Servidor web
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }
tokio = { version = "1.35", features = ["full"] }

# Base de datos
sqlx = { version = "0.7", features = [
  "runtime-tokio-rustls",
  "postgres",
  "uuid",
  "time",
  "json",
] }
sea-orm = { version = "0.12", features = [
  "sqlx-postgres",
  "runtime-tokio-rustls",
  "macros",
] }

# Vault y configuración
hashicorp_vault = "3.0"
config = { version = "0.13", features = ["yaml"] }

# Utilidades
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# Logging y métricas
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Testing
tokio-test = "0.4"
mock-it = "0.5"

[dev-dependencies]
pretty_assertions = "1.4"
test-log = "0.2"
