[package]
name = "solana-integration"
version = "0.1.0"
edition = "2021"

[dependencies]
solana-sdk = "1.16.0"
solana-logger = "1.16.0"
anyhow = "1.0"
bs58 = "0.5.0"
tokio = { version = "1.14.1", features = ["full"] }
axum = { version = "0.7", features = ["macros"] }
axum-extra = "0.9"
tower-http = { version = "0.5", features = ["cors", "trace"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
ark-bn254 = "0.4.0"
ark-ff = "0.4.0"
ark-ec = "0.4.0"
ark-std = "0.4.0"
ark-serialize = "0.4.0"
light-poseidon = "0.2.0" 