[package]
name = "backend-core"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
# Servidor web
axum = { version = "=0.4.8", features = ["headers"] }
axum-extra = { version = "=0.1.4" }
tower = "=0.4.13"
tower-http = { version = "=0.2.5", features = ["fs", "trace", "cors"] }
tokio = { version = "=1.14.1", features = ["full"] }

# HTTP Client
reqwest = { version = "0.11", features = ["json"] }

# Base de datos
sqlx = { version = "0.6.3", default-features = false, features = [
  "runtime-tokio-rustls",
  "postgres",
  "uuid",
  "time",
  "json"
] }
sea-orm = { version = "0.11.3", default-features = false, features = [
  "sqlx-postgres",
  "runtime-tokio-rustls",
  "macros",
  "with-uuid"
] }

# Autenticación y seguridad
jsonwebtoken = "9.2"
argon2 = { version = "0.5", features = ["std"] }
password-hash = { version = "0.5", features = ["std"] }
rand = { version = "0.8", features = ["getrandom"] }

# Vault y configuración
hashicorp_vault = "2.1"
config = "0.13"

# Utilidades
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["serde", "v4"] }
chrono = { version = "0.4", features = ["serde"] }
rust_decimal = "1.33"
rust_decimal_macros = "1.33"
async-trait = "0.1"
zeroize = "1.3.0"

# Logging y métricas
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Encoding
base64 = "0.22"

# Testing
tempfile = "3.10.1"

[dev-dependencies]
pretty_assertions = "1.4"
test-log = "0.2"
mockall = "0.12"
tokio-test = "0.4"
mock-it = "0.5" 