[package]
name = "backend-core"
version = "0.1.0"
edition = "2021"

[dependencies]
# Blockchain
ethers = { version = "2.0", features = ["ws", "rustls"] }
solana-sdk = "=1.17.7"
solana-client = "=1.17.7"
spl-token = "=4.0.0"
spl-associated-token-account = "=2.2.0"

# Database
sea-orm = { version = "0.12", features = ["sqlx-postgres", "runtime-tokio-rustls", "macros"] }
sqlx = { version = "0.7.3", features = ["postgres", "runtime-tokio-rustls", "chrono", "uuid"] }

# API
axum = { version = "0.6.20", features = ["headers"] }
tower = "0.4"
tower-http = { version = "0.4", features = ["trace", "cors"] }
hyper = { version = "0.14", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Async
tokio = { workspace = true }
async-trait = "0.1"

# Time
chrono = { version = "0.4", features = ["serde"] }
time = "0.3"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Auth
jsonwebtoken = "8.1"
argon2 = { version = "0.5", features = ["std"] }
password-hash = { version = "0.5", features = ["std"] }

# Utils
uuid = { version = "1.0", features = ["serde", "v4"] }
config = "0.13"
reqwest = { version = "0.11", features = ["json"] }
hashicorp_vault = "2.1"
rust_decimal = "1.33"
rust_decimal_macros = "1.33"
zeroize = "1.3.0"

# Logging
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

# Encoding
base64 = "0.22"

# Testing
tempfile = "3.10.1"

# Removed blockchain dependencies

[dev-dependencies]
pretty_assertions = "1.4"
test-log = "0.2"
mockall = "0.11"
tokio-test = "0.4"
mock-it = "0.5" 