[package]
name = "ethereum-integration"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
ethers = { version = "2.0", features = ["ws", "rustls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.18", features = ["full"] }

[dev-dependencies]
mockall = "0.11"
tokio-test = "0.4" 