[package]
name = "ethereum-service"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
ethers = { version = "2.0", features = ["ws", "rustls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { workspace = true }
axum = "0.6.20"
tower = "0.4"
tower-http = { version = "0.4", features = ["trace", "cors"] }

[dev-dependencies]
mockall = "0.11"
tokio-test = "0.4" 