[package]
name = "solana-integration"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
# Solana
solana-sdk = "=1.16.0"
solana-client = "=1.16.0"
solana-program = "=1.16.0"
anchor-lang = "=0.28.0"
anchor-client = "=0.28.0"

# Utilidades
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "=1.14.1", features = ["full"] }
anyhow = "1.0"
thiserror = "1.0"

[dev-dependencies]
tokio-test = "0.4" 