[package]
name = "api-gateway"
version = "0.1.0"
edition = "2021"

[dependencies]
# Shared types
vibestream-types = { path = "../../shared/types" }

# Web framework
axum = { version = "0.7.9", features = ["macros", "multipart", "ws"] }
tokio = { version = "1.0", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }
hyper = "1.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Async traits
async-trait = "0.1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Message queue (Redis para comunicación con otros servicios)
redis = { version = "0.24", features = ["tokio-comp"] }

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid", "json", "bigdecimal"] }

# UUID generation
uuid = { version = "1.0", features = ["v4", "serde"] }

# JWT Authentication
jsonwebtoken = "9.2"
bcrypt = "0.15"

# Payment Gateway Dependencies
hmac-sha256 = "1.1"
base64 = "0.21"
sha2 = "0.10"

# Environment variables
dotenvy = "0.15"

# HTTP client for blockchain services
reqwest = { version = "0.11", features = ["json"] }

# Additional utilities for precise calculations
rust_decimal = { version = "1.32", features = ["serde-float"] }

# Added from the code block
regex = "1.10"
lazy_static = "1.4"

bigdecimal = "0.4"
num-traits = "0.2"

# Kafka for event streaming (usando features más simples)
rdkafka = { version = "0.36", features = ["ssl", "sasl"] }

# Async runtime
tokio-stream = "0.1"

# Metrics
prometheus = "0.13"

utoipa = { version = "4.2", features = ["axum_extras", "chrono", "uuid"] }
utoipa-swagger-ui = { version = "6.0", features = ["axum"] }
utoipa-redoc = { version = "3.0", features = ["axum"] }
schemars = "0.8"
serde_yaml = "0.9"

futures-util = "0.3"

# Random number generation (moved from dev-dependencies)
rand = "0.8"

# File handling and multipart uploads
bytes = "1.5"
tokio-util = { version = "0.7", features = ["codec"] }
mime = "0.3"

# Audio metadata extraction
symphonia = { version = "0.5", features = ["all"] }

# Storage backends (for future implementation)  
aws-config = "1.1.0"
aws-sdk-s3 = "1.14.0"
aws-smithy-async = "1.0.0"
aws-smithy-http = "0.60.0"
aws-smithy-types = "1.0.0"
# ipfs-api = "0.17" # TODO: Add for IPFS storage

# Revolutionary P2P Dependencies (commented out for now to avoid conflicts)
# webrtc = "0.7"
# libp2p = "0.53"
# tokio-tungstenite = "0.20"
# futures = "0.3"

# ActivityPub Federation (commented out for now - will be implemented later)
# activitypub = "0.4"
# activitystreams = "0.7"
# http-signature-normalization = "0.7"

# IPFS Integration (commented out for now)
# ipfs-api-backend-hyper = "0.6"
# ipfs-api-prelude = "0.6"

# P2P Networking (commented out for now)
# mdns = "3.0"
# kad = "0.45"
# noise = "0.4"

# WebRTC dependencies
webrtc = "0.9"

# Video processing (commented out due to FFmpeg compatibility issues)
# ffmpeg-next = "6.1"
# image = "0.24"

[dev-dependencies]
# Testing framework
tokio-test = "0.4"
tower-test = "0.4"
rstest = "0.18"

# HTTP testing  
reqwest = { version = "0.11", features = ["json"] }

# Assertions
assert_matches = "1.5"
pretty_assertions = "1.4"

# Mock data generation
fake = { version = "2.9", features = ["derive", "chrono", "uuid"] }
rand = "0.8"

# Test utilities
tempfile = "3.8"
serial_test = "3.0" 
