[package]
name = "api-gateway"
version = "0.1.0"
edition = "2021"

[dependencies]
# Core dependencies
tokio = { version = "1.25", features = ["full"] }
axum = { version = "0.7", features = ["multipart", "ws"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Date/time and UUID
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Async
async-trait = "0.1"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Redis
redis = { version = "0.23", features = ["tokio-comp", "connection-manager"] }

# Shared types
vibestream-types = { path = "../../shared/types" }

# JWT
jsonwebtoken = "9.0"

# OpenAPI - Comentado temporalmente para compilaci칩n r치pida
# utoipa = { version = "4.0", features = ["axum_extras"] }
# utoipa-axum = "6.0"

# Config
config = "0.13"

# WebSocket
tokio-tungstenite = "0.20"

# HTTP client
reqwest = { version = "0.11", features = ["json"] }

# Crypto
sha2 = "0.10"
hex = "0.4"

# Regex and utilities
regex = "1.0"
lazy_static = "1.4"

# Database - Comentado temporalmente para compilaci칩n r치pida
# sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid", "json"] }

[dev-dependencies]
# Testing framework
tokio-test = "0.4"
tower-test = "0.4"
rstest = "0.18"

# HTTP testing  
reqwest = { version = "0.11", features = ["json"] }

# Assertions
assert_matches = "1.5"
pretty_assertions = "1.4"

# Mock data generation
fake = { version = "2.9", features = ["derive", "chrono", "uuid"] }
rand = "0.8"

# Test utilities
tempfile = "3.8"
serial_test = "3.0" 
