[package]
name = "api-gateway"
version = "0.1.0"
edition = "2021"

[features]
default = []
# Feature flag para habilitar gateways mock (solo para desarrollo/testing)
# Por defecto deshabilitado para evitar que frontend consuma endpoints mock
enable_mock_gateways = []

[dependencies]
# Core dependencies
tokio = { version = "1.25", features = ["full"] }
axum = { version = "0.7", features = ["multipart", "ws", "macros"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }
tower_governor = "0.4.2"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_urlencoded = "0.7"
log = "0.4"
validator = { version = "0.19", features = ["derive"] }
base64 = "0.21"

# Date/time and UUID
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Async
async-trait = "0.1"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Redis
redis = { version = "0.23", features = ["tokio-comp", "connection-manager"] }

# Shared types
vibestream-types = { path = "../../shared/types" }

# JWT
jsonwebtoken = "9.0"

# OpenAPI - Versiones compatibles
utoipa = { version = "4.0", features = ["axum_extras"] }
utoipa-axum = "0.1"
utoipa-swagger-ui = "0.1"
utoipa-redoc = "0.1"

# Config
config = "0.13"

# WebSocket
tokio-tungstenite = "0.20"

# HTTP client
reqwest = { version = "0.11", features = ["json"] }

# Crypto
sha2 = "0.10"
hmac-sha256 = "1.1" # Added for Stripe/Webhook signature verification
hex = "0.4"
bcrypt = "0.15"

# Random number generation
rand = "0.8"

# Regex and utilities
regex = "1.0"
lazy_static = "1.4"

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid", "json", "migrate", "bigdecimal"] }

# Bytes for file handling
bytes = "1.0"
num-traits = "0.2.19"
rust_decimal = "1.37.2"
futures-util = "0.3.31"

# Audio processing
symphonia = { version = "0.5", features = ["aac", "mp3", "isomp4", "alac"] }

[dev-dependencies]
# Testing framework
tokio-test = "0.4"
tower-test = "0.4"
rstest = "0.18"

# HTTP testing  
reqwest = { version = "0.11", features = ["json"] }

# Assertions
assert_matches = "1.5"
pretty_assertions = "1.4"

# Mock data generation
fake = { version = "2.9", features = ["derive", "chrono", "uuid"] }
rand = "0.8"

# Test utilities
tempfile = "3.8"
serial_test = "3.0"

# Testcontainers para tests de integración
testcontainers = "0.15"
testcontainers-modules = { version = "0.1.0-beta.1", features = ["postgres", "redis"] }

# Optional dependencies for advanced features
rdkafka = { version = "0.35", features = ["cmake-build"] }

# =============================================================================
# BINARIES CONFIGURATION
# =============================================================================
# api-gateway-unified es el binario por defecto (primero en la lista)
# Ejecutar con: cargo run (o cargo run --bin api-gateway-unified)
# =============================================================================

[[bin]]
name = "api-gateway-unified"
path = "src/main_unified.rs"

# Binario deprecado - mantenido solo para compatibilidad
# Usar api-gateway-unified en su lugar
[[bin]]
name = "api-gateway"
path = "src/main.rs" 
