[package]
name = "ethereum-service"
version = "0.1.0"
edition = "2021"

[dependencies]
# Shared types
vibestream-types = { path = "../../shared/types" }

# Ethereum
ethers = { version = "2.0", features = ["ws", "rustls"] }

# Server
tokio = { version = "1.18", features = ["full"] }
axum = { version = "0.7.9", features = ["macros"] }
tower = "0.4"
tower-http = { version = "0.4", features = ["trace", "cors"] }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
anyhow = { workspace = true }
async-trait = "0.1"

[dev-dependencies]
mockall = "0.11"
tokio-test = "0.4" 