[package]
name = "fractional-ownership-service"
version = "0.1.0"
edition = "2021"

[dependencies]
# Shared types
vibestream-types = { path = "../../shared/types" }

# Web framework
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1.0", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors"] }
hyper = "1.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "bigdecimal"] }

# UUID generation
uuid = { version = "1.0", features = ["v4", "serde"] }

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Async traits
async-trait = "0.1"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Message queue (Redis para comunicación)
redis = { version = "0.24", features = ["tokio-comp"] }

# Environment variables
dotenvy = "0.15"

# Financial calculations
rust_decimal = { version = "1.32", features = ["serde-float"] }
bigdecimal = "0.4"
num-traits = "0.2"

[dev-dependencies]
tokio-test = "0.4" 