[package]
name = "solana-service"
version = "0.1.0"
edition = "2021"

[dependencies]
# Shared types (con path absoluto para independencia)
vibestream-types = { path = "../../shared/types" }

# Solana integration - versiones específicas compatibles
solana-sdk = "=1.16.0"
solana-client = "=1.16.0"
spl-token = "=3.5.0"
spl-associated-token-account = "=1.1.3"

# Server - versiones compatibles con Solana
tokio = { version = "1.14", features = ["full"] }
axum = { version = "0.4.8", features = ["headers"] }
tower = "0.4.13"
tower-http = { version = "0.2.5", features = ["cors"] }

# Serialization - versiones específicas
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Override dependencies
base64ct = "=1.6.0"

[dev-dependencies]
tokio-test = "0.4"

# Este servicio NO usa el workspace principal para evitar conflictos 