[package]
name = "zk-service"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "zk-service"
path = "src/main.rs"

[dependencies]
# Shared types
vibestream-types = { path = "../../shared/types" }

# ZK dependencies
# TODO: Agregar dependencias específicas de ZK cuando se definan

# Runtime - usando tokio compatible
tokio = { version = "1.25", features = ["full"] }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
tokio-test = "0.4" 