[package]
name = "zk-service"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "zk-service"
path = "src/main.rs"

[dependencies]
# Shared types
vibestream-types = { path = "../../shared/types" }

# ZK dependencies - REAL IMPLEMENTATIONS
# Using arkworks for proving/verifying
ark-bn254 = "0.4"
ark-groth16 = "0.4"
ark-ff = "0.4"
ark-ec = "0.4"
ark-std = "0.4"
ark-serialize = "0.4"
ark-relations = "0.4"
ark-r1cs-std = "0.4"
ark-crypto-primitives = "0.4"

# JSON handling for witness and proof data
serde_json = "1.0"

# Process management for calling circom
# Base64 encoding for proof data
base64 = "0.21"

# File I/O
tempfile = "3.5"

# Runtime - usando tokio compatible
tokio = { version = "1.25", features = ["full", "process"] }

# Serialization
serde = { workspace = true }

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# HTTP server for ZK service endpoints
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors"] }

# HTTP client for downloading powers of tau
reqwest = { version = "0.11", features = ["json"] }

# Redis for caching compiled circuits
redis = { version = "0.24", features = ["tokio-comp"] }

[dev-dependencies]
tokio-test = "0.4" 